--- a/IndexAstroPi.html
+++ b/IndexAstroPi.html
@@ -17,4 +17,4 @@
 <img src="AstroPi_key_visual_pillars.png" width=40%>
 
 <br>  
-<a href="IndexMEPortefolie.html"> Marks Portefolio </a>
+<a href="main.html"> Marks Portefolio </a>
