--- a/IndexMEPortefolie.html
+++ b/IndexMEPortefolie.html
@@ -3,27 +3,99 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="myStyle.css">
-<title>Marks Portfolie</title>
+<title>ESAs Mission Space Lab</title>
 </head>
 
-
-<body>
-<h1>Marks Portfolie </h1>
-<p>Jeg hedder Mark Kondoskal og er 18 år gammel og går på RYS.
-<br>
-Jeg laver denne hjemmeside for at fortælle om mig og mit liv 
+<h1>
+    ESAs Mission Space Lab
+</h1>
+<p>
+    <a href="main.html"> Marks Portefolio </a>
 </p>
 
+<body>
+    <div class="old">
+        <div class="box1">
+            <h2>
+                Selvprogrameret tracking
+            </h2>
+            <p>
+                Info 
+            </p>
+        </div>
 
-<img src="IMG_4300.JPG" width=40%>
+        <div class="box2">
+            <h2>
+                Gennemgang af ESAs specifikationer og en vurdering af hvilke rammer det sætter for jeres projekt.
+            </h2>
+            <p>
+                Info 
+            </p>
+        </div>
 
+        <div class="box3">
+            <h2>
+                Beskrivelse af hvilke sensorer I vil bruge og hvad I vil måle med dem.
+            </h2>
+            <p>
+                Info 
+            </p>
+        </div>
 
-<h2> Herunder er min gamle hjemmeside </h2>
+        <div class="box4">
+            <h2>
+                Grundig beskrivelse af testmåling af mindst en sensor. 
+            </h2>
+            <p>
+                Info 
+            </p>
+        </div>
 
+        <div class="box5">
+            <h2>
+                Gennemgang af relevante kodestumper.
+            </h2>
+            <p>
+                Info 
+            </p>
+        </div>
 
-<a href="indexMakingOwnWeb.html"> How to build your own website </a> 
-<br>
-<a href="IndexAstroPi.html"> AstroPi </a>
+        <div class="box6">
+            <h2>
+                En vedhæftet fil med jeres programkode. 
+            </h2>
+            <div class="img">
+                <img src="pcp.JPG" id="img6">
+                <div class="text">
+                    <p>
+                        Info 
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="box7">
+            <h2>
+                Vurdering af om jeres kode lever op til ESAs kravspecifikationer.
+            </h2>
+            <p>
+                Info 
+            </p>
+        </div>
+
+        <div class="box8">
+            <h2>
+                Et Rutediagram/Flowchart af jeres programkode.
+            </h2>
+            <div class="img">
+                <img src="guide.JPG" id="img8">
+                <div class="text">
+                    <p>
+                        Info 
+                    </p>
+                </div>
+            </div>
+        </div>
 
 </body>
 </html>
