--- a/IndexMEPortefolie.html
+++ b/IndexMEPortefolie.html
@@ -10,77 +10,50 @@
     ESAs Mission Space Lab
 </h1>
 <p>
-    <a href="main.html"> Marks Portefolio </a>
+    <a href="index.html"> Marks Portefolio </a>
 </p>
 
 <body>
-    <div class="old">
-        <div class="box1">
-            <h2>
-                Selvprogrameret tracking
-            </h2>
-            <p>
-                Info 
-            </p>
-        </div>
 
         <div class="box2">
             <h2>
-                Gennemgang af ESAs specifikationer og en vurdering af hvilke rammer det sætter for jeres projekt.
+                Hvad er AstroPi
             </h2>
             <p>
-                Info 
+                AstroPi er en mini-computer, der bruges ombord på Den Internationale Rumstation (ISS) til at udføre videnskabelige eksperimenter i rummet. Computeren har en er sensor- og LED-hat, der kan indsamle data og tage billeder og video fra ISS. Elever kan deltage i AstroPi-udfordringen, hvor de kan designe og programmere eksperimenter til at køre på AstroPi'en i rummet. Det giver eleverne en praktisk måde at lære om videnskab og teknologi på.
             </p>
         </div>
 
         <div class="box3">
             <h2>
-                Beskrivelse af hvilke sensorer I vil bruge og hvad I vil måle med dem.
+                Hvilket forsøg lavede vi
             </h2>
             <p>
-                Info 
+                Vi ville prøve at finde ud af om der er fartskift på ISS imens den kredser jorden. Det vil atlså sige at vi vil finde ud af om solstålerne skubbewr ISS frem. 
             </p>
         </div>
 
         <div class="box4">
             <h2>
-                Grundig beskrivelse af testmåling af mindst en sensor. 
+                Hvilke sensors brugte vi
             </h2>
             <p>
-                Info 
-            </p>
-        </div>
-
-        <div class="box5">
-            <h2>
-                Gennemgang af relevante kodestumper.
-            </h2>
-            <p>
-                Info 
+                Vi ville gøre brug af kameraet til at finde ISS’s placering og derefter se om de store solceller der sidder på siden af ISS bliver påvirket af solen og om den accelerere vha. påvirkning fra solen.
             </p>
         </div>
 
         <div class="box6">
             <h2>
-                En vedhæftet fil med jeres programkode. 
+                Gennemgang af kode.
             </h2>
             <div class="img">
                 <img src="pcp.JPG" id="img6">
                 <div class="text">
                     <p>
-                        Info 
+                        Denne del af koden vil tage billede af jorden ved at tælle ned fra 3 og gemme billedet. 
                     </p>
                 </div>
             </div>
-        </div>
-
-        <div class="box7">
-            <h2>
-                Vurdering af om jeres kode lever op til ESAs kravspecifikationer.
-            </h2>
-            <p>
-                Info 
-            </p>
         </div>
 
         <div class="box8">
@@ -91,7 +64,7 @@
                 <img src="guide.JPG" id="img8">
                 <div class="text">
                     <p>
-                        Info 
+                        
                     </p>
                 </div>
             </div>
