--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <img src="IMG_4300.JPG" id="pfp">
         </div>
         <div class="text">
-            <p>Jeg hedder Mark Kondoskal og er 18 år gammel og går på RYS.
-                <br>Dette er min hjemmeside der viser hvad jeg har lavet.
+            <p>Jeg hedder Mark Kondoskal og er 18 år gammel og går i 3t på Rysensteen Gymnasie. Som mit ene valgfag i 3.g har jeg valgt Informatik C. I informatik har vi arbejdet med forskellige former for projekter, herunder AstroPi, Databaser og webteknologi.  de forskellige projekter har vi arbejdet med tre forskellige kodningssprog: Javascript, HTML og Python. Før jeg startede på gym, gik jeg i 8. og 9. klasse i USA. Dette er mit portfolie der viser hvad jeg har lavet undervejs.
             </p>
         </div>
       </div>
@@ -49,11 +48,11 @@
 
         <div class="box3">
             <h2>
-                "Portfolie"
+                "AstroPi"
             </h2>
             <p>
                 Herunder er min "ESAs Mission Space Lab" hjemmeside
-                <br><a href="IndexMEPortefolie.html"> Portfolie </a>
+                <br><a href="IndexMEPortefolie.html"> AstroPi </a>
             </p>
         </div>
     </div>
